  menus to be used and not just the primary & secondary links.
#1491398 by DamienMckenna: Improved default settings so the popup looks more
  like a popup menu rather than a tooltip.
#1496980 by DamienMcKenna: "Undefined index" editing menus, slight cleanup.
#1441214 by DamienMcKenna: Added a note to README.txt about menu link titles
  not working as tooltips due to how qTip works.


Menu_MiniPanels 6.x-1.3-rc3, 2012-01-26
---------------------------------------
#1379542 by DamienMcKenna: Added note to README.txt about a known conflict
  with the DivX Player.
#1376860 by DamienMcKenna: Option to not output anything on admin pages.
#1304560 by codycraven, Amitaibu, jwilson3, DamienMcKenna: Automatically
  assign the "qtip-hover" class to the triggering menu link. Updated the
  API.txt example accordingly.
#1130664 by DamienMcKenna: Don't overwrite the $form['menu']['options'] element
  on the menu item edit form as it breaks other modules.
#1379542 by DamienMcKenna: Improved the README.txt note to be slightly more
  accurate of the problem.


Menu_MiniPanels 6.x-1.3-rc2, 2011-09-03
---------------------------------------
#1239292 by DamienMcKenna: Missed another line from rerolling the #1230622
  patch that caused the settings page to break.
#1116990 by kndr, DamienMcKenna: Added access to the qTips callbacks.
#1251804 by DamienMcKenna: Indicate what qTip JS file is being used.
#1238890 by DamienMcKenna: Leave a warning in hook_install() if the qTip JS
  library is not installed.
#1258150 by davidwhthomas, DamienMcKenna: Simplified usage of
  drupal_add_css(), we don't need to specify default arguments.
#1238882 by DamienMcKenna: Drush script to download the qTip script.


Menu_MiniPanels 6.x-1.3-rc1, 2011-08-04
---------------------------------------
#1230622 by DamienMcKenna: Missed a line when I originally rerolled this
  patch.
#943842 by DamienMcKenna: Allow the qTip file to be loaded from multiple paths,